--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/react-toastify": "^4.1.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "query-string": "^9.1.0",
