--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-toastify": "^4.1.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.9",
+    "recharts": "^2.13.0",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,7 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3002 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/recharts": "^1.8.29",
     "tailwindcss": "^3.4.12"
   }
 }
