--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
