--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mangafe",
+  "homepage": "https://quanghuydz123.github.io/WebsiteMangaFE",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,7 +42,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +66,7 @@
   },
   "devDependencies": {
     "@types/recharts": "^1.8.29",
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.12"
   }
 }
